# cup2025

./: .gitignore  README.md  features.py  main.py  pyproject.toml
model/: mlp_transfer.py  svm_transfer.py  transfer.py  xgboost_transfer.py
plots/: feature_visualization.py  frequency_analysis.py
preprocess/: base_data.py  transfer_data.py
