[project]
name = "huawei-cup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pytorch-lightning>=2.5.5",
    "pywavelets>=1.9.0",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "umap-learn>=0.5.9.post2",
]
